# advML_lab2

./: .gitignore  README.md  baseline_model.py  dataset.py  eval.py  eval_baseline.py  model.py  pyproject.toml  readme  train.py  train_baseline.py
results/: baseline_model.pth
results/exp2/: README.md  model.pth
results/exp3/: README.md  baseline_model.pth  model.pth
results/exp4/: README  baseline_model.pth
results/exp5/: README  baseline_model.pth
