[project]
name = "advml-lab2"
version = "0.1.0"
description = "Binary classification of AI-generated images using TransUNet on the CIFAKE dataset"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "tqdm>=4.67.3",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
